[package]
name = "isecad"
description = "Computer-aided worldbuilding toolkit."
version = "0.0.1-alpha.0"
authors = ["Marina Miyaoka <miyaokamarina@gmail.com> (https://twitter.com/miyaokamarina)"]
license = "MIT"

repository = "https://github.com/isecad/isecad"

edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.62"
console_error_panic_hook = "^0.1.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Performance",
]
